--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  security:
+    debug: true
+
   application:
     api-keys:
       url-scan-io: 01991109-26cf-7747-aac9-dff88a5c7fc2
@@ -10,14 +13,14 @@ spring:
       email-confirmation-token-expiration: 86400000
       reset-2fa-token-expiration: 900000
     uri:
-      confirm-registration: http://localhost:8080/net-safety-service/api/v1/users/confirm-email
-      confirm-2fa-secret-reset:  http://localhost:8080/net-safety-service/api/v1/auth/confirm-reset-2fa-secret
+      confirm-registration: http://45.135.164.118:8080/net-safety-service/api/v1/users/confirm-email
+      confirm-2fa-secret-reset:  http://45.135.164.118:8080/net-safety-service/api/v1/auth/confirm-reset-2fa-secret
     sender-email: yvgnantnv@yandex.ru
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/netsafetyapp
-    username: postgres
-    password: root
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
